syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;

package resources.proto;

message ListOfInfo {
  repeated string strings = 1;
}

message SavedInfo {
  string infoId = 1;
  string saveDateTime = 2;
  SavedInfoType infoType = 3;
  string recordName = 4;
  bytes savedInfo = 5;
}

enum SavedInfoType {
  PHOTO = 0;
  DOCUMENT = 1;
  TEXT = 2;
}

message UserInfo {
  string telegramId = 1;
  int64 savedInfoCountBytes = 2;
  repeated SavedInfo UserInfo = 3;
}

message GetInfoRequest {
  string userId = 1;
}

message GetInfoResponse {
  repeated UserInfo info = 1;
}

message GetMessagesResponse {
  repeated Message info = 1;
}

message Message {
  string messageId = 1;
  string messageText = 2;
  string messageFull = 3;
  google.protobuf.Timestamp saveDateTime = 4;
}

service SaveInfoService {
  rpc getUserInfo(GetInfoRequest) returns (GetInfoResponse);
  rpc getUserMessages(GetInfoRequest) returns (GetMessagesResponse);
  rpc getUserMessagesBidirectional(stream GetInfoRequest) returns (stream GetMessagesResponse);
}